projeto finalizado dev

--- a/src/componentes/movieCard/movieCard.module.css
+++ b/src/componentes/movieCard/movieCard.module.css
@@ -1,6 +1,6 @@
 .movie {
-    width: 310px;
-    height: 460px;
+    width: 307px;
+    height: 358px;
     margin: 1.5rem;
     position: relative;
     overflow: hidden;
@@ -18,7 +18,7 @@
     width: 100%;
     opacity: 0;
     top: 0;
-    color: #f9d3b4;
+    color: #9a5f3e;
   }
   
   .movie:hover {
@@ -44,19 +44,22 @@
     left: 0;
     right: 0;
     padding-left: 116px 24px 24px;
+    text-align: left;
+    padding-left: 0.7rem;
   }
   
-  .movie div :nth-of-type(3) span {
+  .movie div:nth-of-type(3) span {
     text-transform: uppercase;
     font-size: 13px;
     letter-spacing: 2px;
     font-weight: bold;
-    color: #f0f0f0;
+   color: #A49C9C;
   }
   
-  .movie div :nth-of-type(3) h3 {
+  .movie div:nth-of-type(3) h3 {
     margin-top: 5px;
-    color: #f9d3b4;
+    color: #9A5F3E;
+
   }
   
   .movie:hover div:nth-of-type(2) {
