--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -32,15 +32,21 @@ body {
 }
 
 .logo img {
-  width: 70%;
+  width: 90%;
   height: auto;
   display: block;
   margin: auto;
 }
+.searchMenu{
+  display: flex;
+  align-items: center;
+  margin: 4rem 0 2rem;
+  gap: 1em;
+  
+}
 
 .search {
-  flex: 1;
-  margin: 4rem 0 2rem;
+  width: 70%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -56,16 +62,27 @@ body {
   border: none;
   padding-right: 1rem;
   outline: none;
-  color: #a1a1a1;
+  color: white;
   background: #1f2123;
   font-size: 1.6rem;
   font-weight: 500;
+  width: 1028px;
+}
+
+.searchMenu ion-icon{
+  background: none;
+  font-size: 64px;
+  color: white;
+  cursor: pointer;
+  
 }
 
 .search img {
   width: 35px;
   height: 35px;
   cursor: pointer;
+ 
+ 
 }
 
 .empty {
@@ -75,13 +92,13 @@ body {
   justify-content: center;
   align-items: center;
 
-  color: #f9d3b4;
 }
 
 .container {
   width: 100%;
   margin-top: 3rem;
   display: flex;
+  border-radius: 80rem;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
@@ -91,9 +108,14 @@ body {
   .app {
     padding: 4rem 2rem;
   }
+  .searchMenu{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
   .search {
     padding: 1rem 1.75rem;
-    width: 100%;
+    width: 70%;
   }
   .search input {
     font-size: 1rem;
